hphp/hack/test/typecheck/xhp_attr_12.php.exp
File "xhp_attr_12.php", line 9, characters 10-20:
Invalid return type (Typing[4110])
File "xhp_attr_12.php", line 8, characters 27-29:
This is an int
File "xhp_attr_12.php", line 6, characters 13-17:
It is incompatible with an array
