hphp/hack/test/typecheck/xhp_attr_12.php
<?hh
class :foo {
  attribute :bar;
}
class :bar {
  attribute array blah = array();
}
function test(:foo $obj): int {
  return $obj->:blah;
}
